Fri Nov 11 12:29:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * include/makeinclude/platform_vxworks5.5.x.GNU:
        * bin/MakeProjectCreator/templates/gnu.mpd:
	* ace/config-vxworks5.x.h:
	  More changes to accommodate VxWorks 5.5.1 builds.

Thu Nov 11 19:05:45 2004  Krishnakumar B  <kitty@spam.invalid.domain>

        * bin/MakeProjectCreator/config/ciao_component_dnc.mpb (project):
          Added a dependency from ciao_component_dnc to
          ciao_deployment_stub to resolve errors in building examples
          based on DAnCE framework.

Thu Nov 11 15:56:00 2004  Gary Maxey    <gary.maxey@hp.com>

        * ace/OS_NS_time.h
          Add typedef for ACE_hrtime_t for Tandem platform.
          Add conversion defines needed by High_Res_Timer.cpp.

        * ace/High_Res_Timer.cpp
          Use macro definition for time difference calculation in
          ACE_High_Res_Timer::calibrate.

        * ace/OS_NS_sys_select.inl

          Use spt_select instead of select for Tandem pthreads.

        * ace/os_include/os_pthread.h
        * ace/OS_NS_Thread.cpp
        * ace/Sched_Params.cpp

          Add clause to existing ifdef for Tandem pthreads process
          priority definitions.

        * ace/CDR_Base.h

          Use LongLong typedef specialized for Tandem platform.

        * ace/Basic_Types.cpp

          For Tandem platform, altered initialization of flags
          variable in "operator<<" method.

        * ace/ACE_Export.h

          Added variation for "#define ACE_NAMESPACE_STORAGE_CLASS"
          for Tandem platform compiler.

Thu Nov 11 17:27:24 2004  Kobi Cohen-Arazi  <kobi.cohenarazi@gmail.com>

      * ace/Logging_Strategy.cpp:
        Fixed handle_timeout conditional test to check the max_size against the size of the
        file and not the value of a pointer.
        Fix init to handle re-init correctly. When wipeout_logfile_ is true, than